# NeuralPowerFlow

./: .gitignore  CMakeLists.txt  LEIA-ME.txt  LICENSE  README.md  generatePoints.cpp
modelOutput/: errors.ods  history14_10_10  history14_15_15  history14_20_20  history14_25_25  history14_30_30  history14_35_35  history30_10_10  history30_15_15  history30_20_20  history30_25_25  history30_30_30  history30_35_35  model14_10_10  model14_15_15  model14_20_20  model14_25_25  model14_30_30  model14_35_35  model30_10_10  model30_15_15  model30_20_20  model30_25_25  model30_30_30  model30_35_35  outputSummary14_25_25.csv  outputSummary30_35_35.csv  summary14_5.csv  summary30_5.csv  weights14_25_25.csv  weights30_35_35.csv
python/: inputDataInfoPrinter.py  netToCsv.py  netTrainer.py  outputDataInfoPrinter.py  singleNetTrainer.py  speedTestGPU.py
rede/: admitanceCalc.cpp  admitanceCalc.hpp  barConnectionInfo.cpp  barConnectionInfo.hpp  barInfo.cpp  barInfo.hpp  barra.cpp  barra.hpp  branch.cpp  branch.hpp  branchInfo.cpp  branchInfo.hpp  cdfReader.cpp  cdfReader.hpp  fluxonaoconvergiuexception.h  gausSiedel.cpp  gausSiedelSolver.hpp  netDatasetGenerator.cpp  netDatasetGenerator.hpp  netFactory.cpp  netFactory.hpp  netSolutionPrinter.cpp  netSolutionPrinter.hpp  netStateHandler.cpp  netStateHandler.hpp  neuralFluxDeclare.hpp  newtonSolver.cpp  newtonSolver.hpp  pmuConnector.cpp  pmuConnector.hpp  powerCalc.cpp  powerCalc.hpp  powerFlowSolver.cpp  powerFlowSolver.hpp  powerNet.cpp  powerNet.hpp  powerNetValidator.cpp  powerNetValidator.hpp
test/: NetFactoryTest.cpp  admitanceCalcTest.cpp  barConnectionInfoTest.cpp  barraTest.cpp  branchTest.cpp  cdfReaderTest.cpp  changeTrackableTest.cpp  netSolutionPrinterTest.cpp  newtonFlowTest.cpp  (+11 more)
(+15 files in other folders)
